# SFT2D

./: .buildinfo  .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  api_reference.html  environment.yml  genindex.html  index.html  objects.inv  prepare_rgo_data.py  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sft2d-theory.html  sunspot_data_rgo_1901_2025.csv
.doctrees/: api_reference.doctree  environment.pickle  index.doctree  quickstart.doctree  sft2d-theory.doctree
.doctrees/_autosummary/: sft2d.calculate_advection.doctree  sft2d.calculate_diffusion.doctree  sft2d.calculate_dm.doctree  sft2d.calculate_polar_field.doctree  sft2d.calculate_polar_flux.doctree  sft2d.calculate_time_step.doctree  sft2d.calculate_usflx.doctree  sft2d.create_grid.doctree  sft2d.differential_rotation.doctree  sft2d.initialize_field.doctree  sft2d.meridional_flow.doctree  sft2d.plot_bfly.doctree  sft2d.plot_mag.doctree
.doctrees/examples/: test_package_sft2d.doctree
.doctrees/notebooks/: example-run.doctree
.github/workflows/: documentation.yml
.ipynb_checkpoints/: test_package_sft2d-checkpoint.ipynb
_autosummary/: sft2d.calculate_advection.html  sft2d.calculate_diffusion.html  sft2d.calculate_dm.html  sft2d.calculate_polar_field.html  sft2d.calculate_polar_flux.html  sft2d.calculate_time_step.html  sft2d.calculate_usflx.html  sft2d.create_grid.html  sft2d.differential_rotation.html  sft2d.initialize_field.html  sft2d.meridional_flow.html  sft2d.plot_bfly.html  sft2d.plot_mag.html
_modules/: index.html
_sources/: index.rst.txt  quickstart.md.txt
_sources/_autosummary/: sft2d.calculate_advection.rst.txt  sft2d.calculate_diffusion.rst.txt  sft2d.calculate_dm.rst.txt  sft2d.calculate_polar_field.rst.txt  sft2d.calculate_polar_flux.rst.txt  sft2d.calculate_time_step.rst.txt  sft2d.calculate_usflx.rst.txt  sft2d.create_grid.rst.txt  sft2d.differential_rotation.rst.txt  sft2d.initialize_field.rst.txt  sft2d.meridional_flow.rst.txt  sft2d.plot_bfly.rst.txt  sft2d.plot_mag.rst.txt
data/RGO_Sunspots/: g1874.txt  g1875.txt  g1876.txt  g1877.txt  (+148 more)
docs/: api_reference.rst  conf.py  index.rst  quickstart.md  sft2d-theory.md
examples/: test_package_sft2d.html
notebooks/: example-run.html  example-run.ipynb
sft2d/: __init__.py  _version.py  example_run.py  example_run_packaged.py
test_data/: SC_14.txt  SC_15.txt
(+20 files in other folders)
