[metadata]
name = sft2d
description = 2D Surface Flux Transport (SFT) simulation and analysis package.
author = Soumyaranjan Dash
author_email = dash.soumya922@gmail.com
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sr-dash/SFT2D
platforms = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    numpy>=1.22
    scipy>=1.8
    matplotlib>=3.7
    h5py>=3.8

